--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.15.22",
+    "gatsby-background-image": "^0.8.12",
+    "gatsby-image": "^2.2.21",
     "gatsby-plugin-sass": "^2.1.15",
+    "gatsby-plugin-sharp": "^2.2.25",
     "gatsby-plugin-styled-components": "^3.1.6",
     "gatsby-source-filesystem": "^2.1.26",
+    "gatsby-transformer-sharp": "^2.2.17",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
