--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "gatsby-plugin-sass": "^2.1.15",
     "gatsby-plugin-sharp": "^2.2.25",
     "gatsby-plugin-styled-components": "^3.1.6",
+    "gatsby-plugin-transition-link": "^1.13.0",
     "gatsby-source-filesystem": "^2.1.26",
     "gatsby-transformer-sharp": "^2.2.17",
+    "gsap": "^2.1.3",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
