--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
+    "dotenv": "^8.1.0",
+    "eslint-plugin-react-app": "^6.0.3",
     "gatsby": "^2.15.22",
     "gatsby-background-image": "^0.8.12",
     "gatsby-image": "^2.2.21",
@@ -21,6 +23,7 @@
     "gatsby-plugin-sharp": "^2.2.25",
     "gatsby-plugin-styled-components": "^3.1.6",
     "gatsby-plugin-transition-link": "^1.13.0",
+    "gatsby-source-contentful": "^2.1.42",
     "gatsby-source-filesystem": "^2.1.26",
     "gatsby-transformer-sharp": "^2.2.17",
     "gsap": "^2.1.3",
@@ -31,6 +34,16 @@
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.3.1",
+    "@typescript-eslint/parser": "^2.3.1",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.4.0",
+    "eslint-config-react-app": "^5.0.2",
+    "eslint-plugin-flowtype": "^3.13.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "prettier": "^1.18.2"
   },
   "repository": {
